# practice-problems

./: .clang-format  .gitignore  CMakeLists.txt  README.md
C++/Parity/: CMakeLists.txt
C++/Parity/include/: config.hpp.in
C++/Parity/src/: parity.cpp
Parity/: CMakeLists.txt
Parity/include/: IsTrue.hpp
Parity/src/: IsTrue.cpp  parity.cpp
Parity/tests/: IsTrueTest.cpp
SwapBits/: CMakeLists.txt
SwapBits/include/: config.hpp.in
SwapBits/src/: IsTrue.cpp  swapbits.cpp
SwapBits/tests/: IsTrueTest.cpp
